# ComputerGraphics1819

./: .gitignore  README.md
generator/src/: CMakeLists.txt  main.cpp
motor/examples/: box.3d  box2.3d  cone.3d  plane.3d  sphere.3d  test.xml
motor/examples/exemplo novo/: box2.3d  comet.3d  jupyter.3d  mars.3d  mercury.3d  outer_ring.3d  plane2.3d  saturn.3d  teste.xml  teste2.xml
motor/examples/solar_system/: earth.3d  inner_ring.3d  moon.3d  neptune.3d  sun.3d  teste.xml  uranus.3d  venus.3d
motor/src/: CMakeLists.txt  Group.cpp  Light.cpp  Light.h  Model.cpp  Model.h  group.h  main.cpp  utils.cpp  utils.h
